# mycrewmas

./: README.md  pyproject.toml
src/mycrewmas/: crew.py  main.py
