[project]
name = "mycrewmas"
version = "0.1.0"
description = "mycrewmas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
mycrewmas = "mycrewmas.main:run"
run_crew = "mycrewmas.main:run"
train = "mycrewmas.main:train"
replay = "mycrewmas.main:replay"
test = "mycrewmas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
